--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-modal": "^3.16.3",
     "axios": "^1.6.8",
+    "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
-    "react-loader-spinner": "^6.1.6",
-    "react-modal": "^3.16.1"
+    "react-loader-spinner": "^6.1.6"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
